Changed inaccurate gpu-directory to more accurate gpu-node (used to point to device paths like '/dev/nvidia0')

--- a/web/list-channels.html
+++ b/web/list-channels.html
@@ -643,7 +643,7 @@
                             </div>
                             <div>
                               <span class="text-gray-500 dark:text-gray-400">GPU Directory:</span>
-                              <span class="ml-2 text-gray-900 dark:text-white" x-text="channel.metarr?.metarr_gpu_directory || 'Not set'"></span>
+                              <span class="ml-2 text-gray-900 dark:text-white" x-text="channel.metarr?.metarr_gpu_node || 'Not set'"></span>
                             </div>
                             <div>
                               <span class="text-gray-500 dark:text-gray-400">Video Codecs:</span>
