--- a/web/add-channel.html
+++ b/web/add-channel.html
@@ -1216,7 +1216,7 @@
                         </label>
                         <input
                           type="text"
-                          x-model="formData.metarr.metarr_gpu_directory"
+                          x-model="formData.metarr.metarr_gpu_node"
                           placeholder="/dev/dri/renderD128"
                           class="w-full h-11 rounded-lg border border-gray-300 bg-transparent px-4 py-2.5 text-sm text-gray-800 placeholder:text-gray-400 focus:ring-3 focus:outline-hidden dark:border-gray-700 dark:bg-gray-900 dark:text-white/90 dark:placeholder:text-white/30"
                         />
@@ -1585,7 +1585,7 @@
               metarr_max_cpu_usage: '',
               metarr_min_free_mem: '',
               metarr_gpu: '',
-              metarr_gpu_directory: '',
+              metarr_gpu_node: '',
               metarr_transcode_video_transcode_codecs: '',
               metarr_transcode_audio_codecs: '',
               metarr_transcode_quality: '',
