--- a/web/edit-channel.html
+++ b/web/edit-channel.html
@@ -1218,7 +1218,7 @@
                         </label>
                         <input
                           type="text"
-                          x-model="formData.metarr.metarr_gpu_directory"
+                          x-model="formData.metarr.metarr_gpu_node"
                           placeholder="/dev/dri/renderD128"
                           class="w-full h-11 rounded-lg border border-gray-300 bg-transparent px-4 py-2.5 text-sm text-gray-800 placeholder:text-gray-400 focus:ring-3 focus:outline-hidden dark:border-gray-700 dark:bg-gray-900 dark:text-white/90 dark:placeholder:text-white/30"
                         />
@@ -1541,7 +1541,7 @@
               metarr_max_cpu_usage: '',
               metarr_min_free_mem: '',
               metarr_gpu: '',
-              metarr_gpu_directory: '',
+              metarr_gpu_node: '',
               metarr_transcode_video_transcode_codecs: '',
               metarr_transcode_audio_codecs: '',
               metarr_transcode_quality: '',
@@ -1907,7 +1907,7 @@
                 const metarrFields = [
                   'metarr_output_directory', 'metarr_output_ext', 'metarr_rename_style',
                   'metarr_concurrency', 'metarr_max_cpu_usage', 'metarr_min_free_mem',
-                  'metarr_gpu', 'metarr_gpu_directory', 'metarr_transcode_video_transcode_codecs', 'metarr_transcode_audio_codecs',
+                  'metarr_gpu', 'metarr_gpu_node', 'metarr_transcode_video_transcode_codecs', 'metarr_transcode_audio_codecs',
                   'metarr_transcode_quality', 'metarr_transcode_video_filter',
                   'metarr_extra_ffmpeg_args', 'metarr_meta_ops', 'metarr_meta_ops_file',
                   'metarr_filename_ops', 'metarr_filename_ops_file',
