Can clear CRF value field, updated HTML frontend to display all fields for custom channel settings.

--- a/web/add-channel.html
+++ b/web/add-channel.html
@@ -1442,7 +1442,7 @@
                   <div x-show="activeTab === 'notifications'" class="space-y-4">
                     <div class="space-y-4">
                       <div class="text-sm text-gray-600 dark:text-gray-400 bg-blue-50 dark:bg-blue-900/20 p-4 rounded-lg">
-                        <p class="font-medium text-gray-700 dark:text-gray-300 mb-2">Notification Format:</p>
+                        <p class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">Notification Format:</p>
                         <ul class="list-disc list-inside space-y-1">
                           <li><code class="bg-white dark:bg-gray-800 px-2 py-0.5 rounded">Notify URL|Friendly Name</code> - Applies to all channel URLs</li>
                           <li><code class="bg-white dark:bg-gray-800 px-2 py-0.5 rounded">Channel URL|Notify URL|Friendly Name</code> - Applies only to specific channel URL</li>
